kubernetes/mango/apps/monitoring/victoria/stack/chart/ingress.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-metrics
  namespace: monitoring
spec:
  hostnames:
    - victoria.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: vmsingle-metrics
          namespace: monitoring
          port: 8429
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateways
